--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.3",
     "@react-hooks-library/core": "^0.6.2",
+    "@supabase/supabase-js": "^2.45.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
     "aos": "^2.3.4",
     "autoprefixer": "^9.8.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "postcss": "^8.4.38",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.5.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
@@ -56,6 +56,9 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.6.0"
   }
 }
