--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "^9.8.8",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.3.1",
