--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-transition-group": "^4.4.5",
     "react-use": "^17.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
